--- a/frontend.html
+++ b/frontend.html
@@ -3,83 +3,106 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Student Management</title>
-    <style>
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-            margin: 40px;
-        }
+    <title>Student Management System</title>
 
-        input,
-        button {
-            padding: 8px;
-            margin: 5px;
-        }
-
-        table {
-            border-collapse: collapse;
-            margin-top: 20px;
-            width: 70%;
-        }
-
-        th,
-        td {
-            border: 1px solid #444;
-            padding: 8px;
-            text-align: left;
-        }
-
-        th {
-            background-color: #f2f2f2;
-        }
-    </style>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="bg-light">
 
-    <h2>Add Student</h2>
+    <div class="container mt-5">
 
-    <input type="text" id="name" placeholder="Name">
-    <input type="number" id="age" placeholder="Age">
-    <input type="text" id="course" placeholder="Course">
-    <button onclick="addStudent()">Add Student</button>
+        <h2 class="text-center mb-4">Student Management System</h2>
 
-    <p id="message"></p>
+        <!-- Add / Update Student -->
+        <div class="card shadow mb-4">
+            <div class="card-header bg-primary text-white">
+                Add / Update Student
+            </div>
 
-    <hr>
+            <div class="card-body">
+                <div class="row g-3">
+                    <div class="col-md-4">
+                        <input type="text" id="name" class="form-control" placeholder="Student Name">
+                    </div>
 
-    <h2>Student List</h2>
+                    <div class="col-md-4">
+                        <input type="number" id="age" class="form-control" placeholder="Age" min="1" max="99"
+                            oninput="this.value = Math.min(this.value, 99)">
+                    </div>
 
-    <button onclick="loadStudents()">Load Students</button>
+                    <div class="col-md-4">
+                        <input type="text" id="course" class="form-control" placeholder="Course">
+                    </div>
+                </div>
 
-    <button onclick="updateStudent()">Update Student</button>
+                <div class="mt-3">
+                    <button id="addBtn" class="btn btn-success" onclick="addStudent()">Add Student</button>
+                    <button id="updateBtn" class="btn btn-warning d-none" onclick="updateStudent()">Update
+                        Student</button>
+                    <button id="cancelBtn" class="btn btn-secondary d-none" onclick="cancelEdit()">Cancel Edit</button>
+                </div>
 
-    <table>
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Name</th>
-                <th>Age</th>
-                <th>Course</th>
-            </tr>
-        </thead>
-        <tbody id="studentTableBody"></tbody>
-    </table>
+                <p id="message" class="mt-3 fw-bold"></p>
+            </div>
+        </div>
 
+        <!-- Student List -->
+        <div class="card shadow">
+            <div class="card-header bg-dark text-white d-flex justify-content-between">
+                <span>Student List</span>
+                <button class="btn btn-sm btn-light" onclick="loadStudents()">Refresh</button>
+            </div>
+            <div class="mb-3">
+                <select class="form-select w-25" onchange="loadStudents(this.value)">
+                    <option value="">Sort By</option>
+                    <option value="name">Name (A–Z)</option>
+                    <option value="created_asc">Oldest First</option>
+                    <option value="created_desc">Newest First</option>
+                    <option value="updated_desc">Recently Updated</option>
+                </select>
+            </div>
+
+            <div class="card-body">
+                <table class="table table-bordered table-striped">
+                    <thead class="table-secondary">
+                        <tr>
+                            <th>S.No</th>
+                            <th>Name</th>
+                            <th>Age</th>
+                            <th>Course</th>
+                            <th>Created</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody id="studentTableBody"></tbody>
+                </table>
+            </div>
+            <div id="showingText" class="mb-2 text-muted text-center"></div>
+            <nav aria-label="Student list pagination" class="mt-3">
+                <ul id="pagination" class="pagination justify-content-center"></ul>
+            </nav>
+        </div>
+
+    </div>
     <script>
         const API_URL = "http://127.0.0.1:5000/students"
 
-        function addStudent() {
-            const snameInput = document.getElementById("name");
-            const ageInput = document.getElementById("age");
-            const courseInput = document.getElementById("course");
+        function showMessage(text, color = "success") {
+            const msg = document.getElementById("message");
+            msg.innerText = text;
+            msg.className = `mt-3 fw-bold text-${color}`;
+        }
 
-            const sname = snameInput.value;
-            const age = ageInput.value;
-            const course = courseInput.value;
+
+        function addStudent() {
+            const sname = document.getElementById("name").value;
+            const age = document.getElementById("age").value;
+            const course = document.getElementById("course").value;
 
             if (!sname || !age || !course) {
-                document.getElementById("message").innerText = "All fields are required.";
+                showMessage("All fields are required.", "danger");
                 return;
             }
 
@@ -96,52 +119,108 @@
             })
                 .then(response => response.json())
                 .then(data => {
-                    document.getElementById("message").innerText = "Student added successfully.";
+                    showMessage("Student added successfully.");
                     loadStudents();
                 })
                 .catch(error => {
-                    document.getElementById("message").innerText = "Error adding student.";
-                    console.error(error)
+                    showMessage("Failed to add student.", "danger");
+                    console.error(error);
                 });
         }
 
-        function loadStudents() {
-            fetch(API_URL)
+        let studentsCache = [];
+        let currentPage = 1;
+        const studentsPerPage = 5;
+        function loadStudents(sort = "") {
+            fetch(`${API_URL}?sort=${sort}`)
                 .then(response => response.json())
                 .then(data => {
-                    const tableBody = document.getElementById("studentTableBody");
-                    tableBody.innerHTML = "";
+                    studentsCache = data;
+                    currentPage = 1;
+                    renderTable(data);
+                });
+        }
 
-                    if (data.length === 0) {
-                        tableBody.innerHTML = `
+        function renderTable(data) {
+            const tableBody = document.getElementById("studentTableBody");
+            tableBody.innerHTML = "";
+
+            const start = (currentPage - 1) * studentsPerPage;
+            const end = start + studentsPerPage;
+            const studentsToShow = data.slice(start, end);
+
+            const showingDiv = document.getElementById("showingText");
+            if (data.length === 0) {
+                showingDiv.innerText = "Showing 0-0 of 0";
+                tableBody.innerHTML = `
                         <tr>
                             <td colspan="4">No students found</td>
                         </tr>    
                         `;
-                        return;
-                    }
+                return;
+            }
+            else {
+                const endIndex = Math.min(end, data.length);
+                showingDiv.innerText = `Showing ${start + 1}-${endIndex} of ${data.length}`;
+            }
 
-                    data.forEach(student => {
-                        const row = `
+            studentsToShow.forEach((student, index) => {
+                tableBody.innerHTML += `
                             <tr>
-                                <td>${student.id}</td>
+                                <td>${start + index + 1}</td>
                                 <td>${student.name}</td>
                                 <td>${student.age}</td>
                                 <td>${student.course}</td>
+                                <td>${new Date(student.created_at).toLocaleDateString()}</td>
                                 <td>
-                                    <button onclick="editStudent(${student.id}, '${student.name}', ${student.age}, '${student.course}')">Edit</button>
-                                    <button onclick="deleteStudent(${student.id})">Delete</button>
+                                    <button class="btn btn-sm btn-info" onclick="editStudent(${student.id}, '${student.name}', ${student.age}, '${student.course}')">Edit</button>
+                                    <button class="btn btn-sm btn-danger" onclick="deleteStudent(${student.id})">Delete</button>
                                 </td>    
                             </tr>
                         `;
-                        tableBody.innerHTML += row;
+            });
 
-                    });
-                })
-                .catch(error => {
-                    console.error("Error loading students:", error);
-                });
+            renderPagination(data.length);
+
         }
+
+        function renderPagination(totalStudents) {
+            const totalPages = Math.ceil(totalStudents / studentsPerPage);
+            const pagination = document.getElementById("pagination");
+            pagination.innerHTML = "";
+
+            const prevClass = currentPage === 1 ? "disabled" : "";
+            pagination.innerHTML += `
+                <li class="page-item ${prevClass}">
+                    <a class="page-link" href="#" onclick="goToPage(${currentPage - 1})">Previous</a>
+                </li>
+            `;
+
+            for (let i = 1; i <= totalPages; i++) {
+                const activeClass = currentPage === i ? "active" : "";
+                pagination.innerHTML += `
+                    <li class="page-item ${activeClass}">
+                        <a class="page-link" href="#" onclick="goToPage(${i})">${i}</a>
+                    </li>
+                `;
+            }
+
+            const nextClass = currentPage === totalPages ? "disabled" : "";
+            pagination.innerHTML += `
+                <li class="page-item ${nextClass}">
+                    <a class="page-link" href="#" onclick="goToPage(${currentPage + 1})">Next</a>
+                </li>
+            `;
+        }
+
+        function goToPage(page) {
+            const totalPages = Math.ceil(studentsCache.length / studentsPerPage);
+            if (page < 1 || page > totalPages)
+                return;
+            currentPage = page;
+            renderTable(studentsCache);
+        }
+
 
         let selectedStudentId = null;
 
@@ -150,7 +229,26 @@
             document.getElementById("name").value = name;
             document.getElementById("age").value = age;
             document.getElementById("course").value = course;
+
+            document.getElementById("updateBtn").classList.remove("d-none");
+            document.getElementById("cancelBtn").classList.remove("d-none");
+            document.getElementById("addBtn").disabled = true;
         }
+
+        function cancelEdit() {
+            selectedStudentId = null;
+            document.getElementById("name").value = "";
+            document.getElementById("age").value = "";
+            document.getElementById("course").value = "";
+
+            document.getElementById("updateBtn").classList.add("d-none");
+            document.getElementById("cancelBtn").classList.add("d-none");
+
+            document.getElementById("addBtn").disabled = false;
+
+            document.getElementById("message").innerText = "";
+        }
+
 
         function updateStudent() {
             if (!selectedStudentId) {
@@ -171,8 +269,16 @@
             })
                 .then(response => response.json())
                 .then(data => {
-                    alert(data.message);
+                    showMessage(data.message);
                     selectedStudentId = null;
+
+                    name.value = "";
+                    age.value = "";
+                    course.value = "";
+
+                    document.getElementById("updateBtn").classList.add("d-none");
+                    document.getElementById("addBtn").disabled = false;
+
                     loadStudents();
                 });
         }
@@ -187,11 +293,15 @@
             })
                 .then(response => response.json())
                 .then(data => {
-                    alert(data.message);
+                    showMessage(data.message);
                     loadStudents();
                 });
 
         }
+
+        window.onload = function () {
+            loadStudents();
+        };
     </script>
 
 </body>
